# ascdk-book

./: .gitignore  404.html  LICENSE  README.md  convert.py  index.html  mkdocs.yml  requirements.txt  sitemap.xml
abi/: index.html
action/: index.html
callc/: index.html
common/: index.html
crypto/: index.html
database/: index.html
deploy/: index.html
docs/: abi.md  abi.zh.md  action.md  action.zh.md  callc.md  callc.zh.md  codon.md  codon.zh.md  common.md  common.zh.md  crypto.md  crypto.zh.md  database.md  database.zh.md  deploy.md  deploy.zh.md  env.md  env.zh.md  helloworld.md  helloworld.zh.md  index.md  index.zh.md  notify.md  notify.zh.md  prelude.md  prelude.zh.md  ui.md  ui.zh.md
en/: index.html
en/abi/: index.html
en/action/: index.html
en/callc/: index.html
en/common/: index.html
en/crypto/: index.html
en/database/: index.html
en/deploy/: index.html
en/env/: index.html
en/helloworld/: index.html
en/notify/: index.html
en/prelude/: index.html
en/ui/: index.html
env/: index.html
examples/: action_example.codon  common_example.codon  crypto_example.codon  helloworld.codon  helloworldtest.py  package.json  test.py
examples/commonfunctions/: Cargo.toml  lib.rs  package.json  test.py  test.sh
examples/commonfunctions/assembly/: test.ts
examples/counter/: Cargo.toml  lib.rs  package.json  test.py  test.sh  tsconfig.json
examples/counter/assembly/: counter.ts
hello/: Cargo.toml  lib.rs  test.py
helloworld/: index.html
notify/: index.html
prelude/: index.html
ui/: index.html
zh/: index.html
(+98 files in other folders)
